--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   app:
     build:
-      context: .
+      context: .  # Build context is the current directory
       dockerfile: Dockerfile
     volumes:
-      - .:/var/www/html # Mount the current directory to /var/www/html
+      - .:/var/www/html/public  # Adjust if your structure differs
     networks:
       - app-network
 
@@ -16,7 +16,7 @@ services:
       - ./database:/docker-entrypoint-initdb.d
     environment:
       MYSQL_DATABASE: intramuros
-      MYSQL_ROOT_PASSWORD: yourpassword # change this to a strong password
+      MYSQL_ROOT_PASSWORD: yourpassword  # Change to a strong password
     networks:
       - app-network
 
